#35198 fix permissions layout on IE

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_layout.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_layout.scss
@@ -1,5 +1,5 @@
 html, body{
-	color:$gray087
+	color:$gray087;
 }
 
 @media screen and (max-width: 768px) {
@@ -9,7 +9,7 @@ html, body{
     flex-wrap: nowrap;
   }
   .con-flex {
-    flex: 1;
+    flex: 1 1 auto;
   }
 }
 .growl-message{
